# FakeVim

./: CMakeLists.txt  main.cpp
